fixed issue where the container keyword was on the income display grid causing distorted view

--- a/front-end/src/budgeting/budgeting.css
+++ b/front-end/src/budgeting/budgeting.css
@@ -7,26 +7,17 @@
     font-family: IBM-Plex-Mono;
     width:98vw;
 }
-
-.title{
-    font-size: 2rem;
-    padding:1rem;
-    margin:10px;
-    height:5vh;
-}
-
 .category-display{
     font-size: 1.5rem;
     padding:20px;
     margin:10px;
     height:80vh;
 
-    border-radius: 2rem;
+    border-radius: 2rem; 
     border-style: solid;
     border-color: black;
 
 }
-
 
 .category{
     font-size:1rem;
